# net-gazer-plugin-all-ethernet

./: Cargo.toml
etc/net-gazer/: libnet-gazer-allipv4.toml
lib-data/: Cargo.toml
lib-data/src/: lib.rs
lib-fbuffers/: Cargo.toml  allipv4.fbs  make.sh
lib-fbuffers/src/: allipv4_generated.rs  lib.rs
src/: app.rs  conf.rs  lib.rs
