[package]
name = "libnet_gazer_allipv4"
version = "0.1.0"
authors = ["S Oleinik <162591+s-oleinik@users.noreply.github.com>"]
edition = "2018"
description = "net-gazer - all-ipv4 plugin"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members=[
    "lib-data",
    "lib-fbuffers",
]


[dependencies]
net-gazer-core = { git = "https://github.com/soleinik/net-gazer-core", branch = "master"}
lib-data = { path="./lib-data" }
lib-fbuffers = { path="./lib-fbuffers" }

log = "0.4.8"
env_logger = "0.7.1"

pnet = "0.25.0"


[lib]
name = "net_gazer_allipv4"
crate-type = ["cdylib"]


[package.metadata.deb]
depends = "$auto, net-gazer"
section = "lib"
priority = "optional"
assets = [
    # binary
    ["target/release/libnet_gazer_allipv4.so", "usr/local/lib/net-gazer/", "755"],
    # config
    ["etc/net-gazer/libnet-gazer-allipv4.toml", "usr/local/etc/net-gazer/libnet-gazer-allipv4.toml", "644"],
    # ldconfig
    ["etc/misc/ld.so.conf.d/libnet-gazer-allipv4.conf", "etc/ld.so.conf.d/libnet-gazer-allipv4.conf", "644"],
    # assets
    ["LICENSE", "/usr/share/doc/net-gazer/LICENSE-all-ether-plugin", "644"],
]

maintainer-scripts = "etc/misc/pkg-scripts"
conf-files=[
    "usr/local/etc/net-gazer/libnet-gazer-allipv4.toml",
]

